<resources>
    <string name="app_name">Mis Mascotas</string>
    <string name="action_settings">Settings</string>
    <string name="Descripcion_Foto_Mascota">Foto de Mascota</string>
    <string name="nombre_mascota">Nombre mascota</string>
    <string name="_12">12</string>
    <string name="top_5">Top 5</string>
    <string name="contacto">Contacto</string>
    <string name="acerca_de">Acerca de:</string>
    <string name="nombre_completo">Nombre completo</string>
    <string name="cuerpo_del_mensaje">Cuerpo del mensaje.</string>
    <string name="enviar_comentario">Enviar comentario</string>
    <string name="email">Email</string>
    <string name="email_1">Email</string>
    <string name="android_developer">Android developer Jorge Martín Marcos.</string>
    <string name="a_cerca_de">A cerca de:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="introduce_tu_usuario">Introduce tu usuario:</string>
    <string name="mascotas_preferidas">Mascotas Preferidas</string>
    <string name="guardar_cuenta">Guardar Cuenta</string>
    <string name="configurar_cuenta">Configurar cuenta</string>
    <string name="recibir_notificaciones">Recibir Notificaciones</string>
    <string name="Ver_perfil">Ver mi perfil</string>
    <string name="DesacerLike">Desacer Like</string>
    <string name="VerMediaUser">Ver ultimoas fotos del usuario</string>

</resources>
