<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/fiveStar"
        android:orderInCategory="1"
        android:title="@string/top_5"
        android:icon="@drawable/star_hotel_48"
        android:showAsAction="ifRoom"
        tools:ignore="AppCompatResource"
        app:showAsAction="always" />
    <item android:id="@+id/mContacto"
        android:title="@string/contacto"
        android:orderInCategory="100">

    </item>
    <item android:id="@+id/mAcercaDe" android:title="@string/acerca_de"
        android:orderInCategory="101">

    </item>
    <item android:id="@+id/mUser" android:title="@string/configurar_cuenta"
        android:orderInCategory="103">

    </item>
    <item android:id="@+id/mNotificaciones" android:title="@string/recibir_notificaciones"
        android:orderInCategory="104">

    </item>
</menu>