<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_formulario_mail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.practica.jmm.mascotaspreferidas.FormularioMail">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:text="@string/contacto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textTitulo"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textAlignment="center"
        android:paddingBottom="40dp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/txiNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre_completo"
            android:inputType="textPersonName"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/txiemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_1"
            android:inputType="textEmailAddress" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/txicontacto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edtContacto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cuerpo_del_mensaje"
            android:inputType="textEmailSubject"/>
    </android.support.design.widget.TextInputLayout>

</LinearLayout>

    <Button
        android:text="@string/enviar_comentario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnSiguinte"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:theme="@style/BotonRaised"
        />

</RelativeLayout>
