<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_usuario_loguin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.practica.jmm.mascotaspreferidas.Usuario_loguin">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/txtUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="41dp"
        android:layout_below="@+id/textTitulo"
        android:layout_alignParentEnd="true">
        <EditText
            android:id="@+id/edtUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/introduce_tu_usuario"
            android:inputType="textPersonName"
            android:layout_marginTop="82dp"
            android:layout_below="@+id/txtUsuario"
            android:layout_alignParentStart="true" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:text="@string/mascotas_preferidas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textTitulo"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textAlignment="center"
        android:paddingBottom="40dp"
        android:layout_marginTop="63dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/guardar_cuenta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnUsuario"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:theme="@style/BotonRaised"
        android:onClick="guardarUsuario"
        />



</RelativeLayout>
